--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,7 @@
     
   <div class="wrapper"> 
     
+    <!-- Top Section -->
     <section class="top-container">
         <div class="first-col">
             <h1>Hinterland</h1>
